org.libertyeiffel.eclipse.editor/src/org/libertyeiffel/eclipse/editor/editor/parser/eiffelParser.java
// $ANTLR 3.5.2 eiffel.g 2016-06-17 16:44:27

import org.antlr.runtime.*;
import java.util.Stack;
import java.util.List;
import java.util.ArrayList;

@SuppressWarnings("all")
public class eiffelParser extends Parser {
	public static final String[] tokenNames = new String[] {
		"<invalid>", "<EOR>", "<DOWN>", "<UP>", "CURRENT", "FALSE_VAL", "RESULT", 
		"TK_BIT_CONSTANT", "TK_CHARACTER_CONSTANT", "TK_FREE_OPERATOR", "TK_IDENTIFIER", 
		"TK_INTEGER", "TK_MANIFEST_STRING", "TK_REAL", "TRUE_VAL", "'\\!'", "'\\$'", 
		"'\\('", "'\\)'", "'\\*'", "'\\+'", "'\\,'", "'\\-'", "'\\-\\>'", "'\\.'", 
		"'\\.\\.'", "'\\/'", "'\\/\\/'", "'\\/\\='", "'\\:'", "'\\:\\='", "'\\;'", 
		"'\\<'", "'\\<\\<'", "'\\<\\='", "'\\='", "'\\>'", "'\\>\\='", "'\\>\\>'", 
		"'\\?\\='", "'\\['", "'\\\\\\\\'", "'\\]'", "'\\^'", "'\\{'", "'\\}'", 
		"'alias'", "'all'", "'and'", "'as'", "'check'", "'class'", "'creation'", 
		"'debug'", "'deferred'", "'do'", "'else'", "'elseif'", "'end'", "'ensure'", 
		"'expanded'", "'export'", "'external'", "'feature'", "'from'", "'if'", 
		"'implies'", "'indexing'", "'infix'", "'inherit'", "'inspect'", "'invariant'", 
		"'is'", "'like'", "'local'", "'loop'", "'not'", "'obsolete'", "'old'", 
		"'once'", "'or'", "'prefix'", "'redefine'", "'rename'", "'require'", "'rescue'", 
		"'retry'", "'select'", "'strip'", "'then'", "'undefine'", "'unique'", 
		"'until'", "'variant'", "'when'", "'xor'"
	};
	public static final int EOF=-1;
	public static final int T__15=15;
	public static final int T__16=16;
	public static final int T__17=17;
	public static final int T__18=18;
	public static final int T__19=19;
	public static final int T__20=20;
	public static final int T__21=21;
	public static final int T__22=22;
	public static final int T__23=23;
	public static final int T__24=24;
	public static final int T__25=25;
	public static final int T__26=26;
	public static final int T__27=27;
	public static final int T__28=28;
	public static final int T__29=29;
	public static final int T__30=30;
	public static final int T__31=31;
	public static final int T__32=32;
	public static final int T__33=33;
	public static final int T__34=34;
	public static final int T__35=35;
	public static final int T__36=36;
	public static final int T__37=37;
	public static final int T__38=38;
	public static final int T__39=39;
	public static final int T__40=40;
	public static final int T__41=41;
	public static final int T__42=42;
	public static final int T__43=43;
	public static final int T__44=44;
	public static final int T__45=45;
	public static final int T__46=46;
	public static final int T__47=47;
	public static final int T__48=48;
	public static final int T__49=49;
	public static final int T__50=50;
	public static final int T__51=51;
	public static final int T__52=52;
	public static final int T__53=53;
	public static final int T__54=54;
	public static final int T__55=55;
	public static final int T__56=56;
	public static final int T__57=57;
	public static final int T__58=58;
	public static final int T__59=59;
	public static final int T__60=60;
	public static final int T__61=61;
	public static final int T__62=62;
	public static final int T__63=63;
	public static final int T__64=64;
	public static final int T__65=65;
	public static final int T__66=66;
	public static final int T__67=67;
	public static final int T__68=68;
	public static final int T__69=69;
	public static final int T__70=70;
	public static final int T__71=71;
	public static final int T__72=72;
	public static final int T__73=73;
	public static final int T__74=74;
	public static final int T__75=75;
	public static final int T__76=76;
	public static final int T__77=77;
	public static final int T__78=78;
	public static final int T__79=79;
	public static final int T__80=80;
	public static final int T__81=81;
	public static final int T__82=82;
	public static final int T__83=83;
	public static final int T__84=84;
	public static final int T__85=85;
	public static final int T__86=86;
	public static final int T__87=87;
	public static final int T__88=88;
	public static final int T__89=89;
	public static final int T__90=90;
	public static final int T__91=91;
	public static final int T__92=92;
	public static final int T__93=93;
	public static final int T__94=94;
	public static final int T__95=95;
	public static final int CURRENT=4;
	public static final int FALSE_VAL=5;
	public static final int RESULT=6;
	public static final int TK_BIT_CONSTANT=7;
	public static final int TK_CHARACTER_CONSTANT=8;
	public static final int TK_FREE_OPERATOR=9;
	public static final int TK_IDENTIFIER=10;
	public static final int TK_INTEGER=11;
	public static final int TK_MANIFEST_STRING=12;
	public static final int TK_REAL=13;
	public static final int TRUE_VAL=14;

	// delegates
	public Parser[] getDelegates() {
		return new Parser[] {};
	}

	// delegators


	public eiffelParser(TokenStream input) {
		this(input, new RecognizerSharedState());
	}
	public eiffelParser(TokenStream input, RecognizerSharedState state) {
		super(input, state);
	}

	@Override public String[] getTokenNames() { return eiffelParser.tokenNames; }
	@Override public String getGrammarFileName() { return "eiffel.g"; }



	// $ANTLR start "classDeclaration"
	// eiffel.g:16:1: classDeclaration : classHeader 'end' ;
	public final void classDeclaration() throws RecognitionException {
		try {
			// eiffel.g:16:18: ( classHeader 'end' )
			// eiffel.g:17:4: classHeader 'end'
			{
			 indexing 
			pushFollow(FOLLOW_classHeader_in_classDeclaration21);
			classHeader();
			state._fsp--;

			 formalGenerics 
			 obsolete 
			 inheritance 
			 creators 
			 features 
			 invariant 
			match(input,58,FOLLOW_58_in_classDeclaration57); 
			}

		}
		catch (RecognitionException re) {
			reportError(re);
			recover(input,re);
		}
		finally {
			// do for sure before leaving
		}
	}
	// $ANTLR end "classDeclaration"



	// $ANTLR start "indexing"
	// eiffel.g:29:1: indexing : 'indexing' indexList ;
	public final void indexing() throws RecognitionException {
		try {
			// eiffel.g:29:10: ( 'indexing' indexList )
			// eiffel.g:30:4: 'indexing' indexList
			{
			match(input,67,FOLLOW_67_in_indexing71); 
			pushFollow(FOLLOW_indexList_in_indexing73);
			indexList();
			state._fsp--;

			}

		}
		catch (RecognitionException re) {
			reportError(re);
			recover(input,re);
		}
		finally {
			// do for sure before leaving
		}
	}
	// $ANTLR end "indexing"



	// $ANTLR start "indexList"
	// eiffel.g:33:1: indexList : indexClause ( '\\;' indexClause )* ;
	public final void indexList() throws RecognitionException {
		try {
			// eiffel.g:33:11: ( indexClause ( '\\;' indexClause )* )
			// eiffel.g:34:4: indexClause ( '\\;' indexClause )*
			{
			pushFollow(FOLLOW_indexClause_in_indexList86);
			indexClause();
			state._fsp--;

			// eiffel.g:35:4: ( '\\;' indexClause )*
			loop1:
			while (true) {
				int alt1=2;
				int LA1_0 = input.LA(1);
				if ( (LA1_0==31) ) {
					alt1=1;
				}

				switch (alt1) {
				case 1 :
					// eiffel.g:35:6: '\\;' indexClause
					{
					match(input,31,FOLLOW_31_in_indexList93); 
					pushFollow(FOLLOW_indexClause_in_indexList95);
					indexClause();
					state._fsp--;

					}
					break;

				default :
					break loop1;
				}
			}

			 '\;' 
			}

		}
		catch (RecognitionException re) {
			reportError(re);
			recover(input,re);
		}
		finally {
			// do for sure before leaving
		}
	}
	// $ANTLR end "indexList"



	// $ANTLR start "indexClause"
	// eiffel.g:39:1: indexClause : indexTerms ;
	public final void indexClause() throws RecognitionException {
		try {
			// eiffel.g:39:13: ( indexTerms )
			// eiffel.g:40:4: indexTerms
			{
			 index_ 
			pushFollow(FOLLOW_indexTerms_in_indexClause118);
			indexTerms();
			state._fsp--;

			}

		}
		catch (RecognitionException re) {
			reportError(re);
			recover(input,re);
		}
		finally {
			// do for sure before leaving
		}
	}
	// $ANTLR end "indexClause"



	// $ANTLR start "index_"
	// eiffel.g:43:1: index_ : identifier '\\:' ;
	public final void index_() throws RecognitionException {
		try {
			// eiffel.g:43:8: ( identifier '\\:' )
			// eiffel.g:44:4: identifier '\\:'
			{
			pushFollow(FOLLOW_identifier_in_index_131);
			identifier();
			state._fsp--;

			match(input,29,FOLLOW_29_in_index_133); 
			}

		}
		catch (RecognitionException re) {
			reportError(re);
			recover(input,re);
		}
		finally {
			// do for sure before leaving
		}
	}
	// $ANTLR end "index_"



	// $ANTLR start "indexTerms"
	// eiffel.g:47:1: indexTerms : indexValue ( '\\,' indexValue )* ;
	public final void indexTerms() throws RecognitionException {
		try {
			// eiffel.g:47:12: ( indexValue ( '\\,' indexValue )* )
			// eiffel.g:48:4: indexValue ( '\\,' indexValue )*
			{
			pushFollow(FOLLOW_indexValue_in_indexTerms146);
			indexValue();
			state._fsp--;

			// eiffel.g:49:4: ( '\\,' indexValue )*
			loop2:
			while (true) {
				int alt2=2;
				int LA2_0 = input.LA(1);
				if ( (LA2_0==21) ) {
					alt2=1;
				}

				switch (alt2) {
				case 1 :
					// eiffel.g:49:6: '\\,' indexValue
					{
					match(input,21,FOLLOW_21_in_indexTerms153); 
					pushFollow(FOLLOW_indexValue_in_indexTerms155);
					indexValue();
					state._fsp--;

					}
					break;

				default :
					break loop2;
				}
			}

			}

		}
		catch (RecognitionException re) {
			reportError(re);
			recover(input,re);
		}
		finally {
			// do for sure before leaving
		}
	}
	// $ANTLR end "indexTerms"



	// $ANTLR start "indexValue"
	// eiffel.g:52:1: indexValue : ( identifier | manifestConstant );
	public final void indexValue() throws RecognitionException {
		try {
			// eiffel.g:52:12: ( identifier | manifestConstant )
			int alt3=2;
			int LA3_0 = input.LA(1);
			if ( (LA3_0==TK_IDENTIFIER) ) {
				alt3=1;
			}
			else if ( (LA3_0==FALSE_VAL||(LA3_0 >= TK_BIT_CONSTANT && LA3_0 <= TK_CHARACTER_CONSTANT)||(LA3_0 >= TK_INTEGER && LA3_0 <= TRUE_VAL)) ) {
				alt3=2;
			}

			else {
				NoViableAltException nvae =
					new NoViableAltException("", 3, 0, input);
				throw nvae;
			}

			switch (alt3) {
				case 1 :
					// eiffel.g:53:4: identifier
					{
					pushFollow(FOLLOW_identifier_in_indexValue171);
					identifier();
					state._fsp--;

					}
					break;
				case 2 :
					// eiffel.g:54:4: manifestConstant
					{
					pushFollow(FOLLOW_manifestConstant_in_indexValue176);
					manifestConstant();
					state._fsp--;

					}
					break;

			}
		}
		catch (RecognitionException re) {
			reportError(re);
			recover(input,re);
		}
		finally {
			// do for sure before leaving
		}
	}
	// $ANTLR end "indexValue"



	// $ANTLR start "classHeader"
	// eiffel.g:58:1: classHeader : 'class' className ;
	public final void classHeader() throws RecognitionException {
		try {
			// eiffel.g:58:13: ( 'class' className )
			// eiffel.g:59:4: 'class' className
			{
			 headerMark 
			match(input,51,FOLLOW_51_in_classHeader192); 
			pushFollow(FOLLOW_className_in_classHeader194);
			className();
			state._fsp--;

			}

		}
		catch (RecognitionException re) {
			reportError(re);
			recover(input,re);
		}
		finally {
			// do for sure before leaving
		}
	}
	// $ANTLR end "classHeader"



	// $ANTLR start "headerMark"
	// eiffel.g:62:1: headerMark : ( 'deferred' | 'expanded' );
	public final void headerMark() throws RecognitionException {
		try {
			// eiffel.g:62:12: ( 'deferred' | 'expanded' )
			// eiffel.g:
			{
			if ( input.LA(1)==54||input.LA(1)==60 ) {
				input.consume();
				state.errorRecovery=false;
			}
			else {
				MismatchedSetException mse = new MismatchedSetException(null,input);
				throw mse;
			}
			}

		}
		catch (RecognitionException re) {
			reportError(re);
			recover(input,re);
		}
		finally {
			// do for sure before leaving
		}
	}
	// $ANTLR end "headerMark"



	// $ANTLR start "className"
	// eiffel.g:67:1: className : identifier ;
	public final void className() throws RecognitionException {
		try {
			// eiffel.g:67:11: ( identifier )
			// eiffel.g:68:4: identifier
			{
			pushFollow(FOLLOW_identifier_in_className225);
			identifier();
			state._fsp--;

			}

		}
		catch (RecognitionException re) {
			reportError(re);
			recover(input,re);
		}
		finally {
			// do for sure before leaving
		}
	}
	// $ANTLR end "className"



	// $ANTLR start "formalGenerics"
	// eiffel.g:72:1: formalGenerics : '\\[' formalGenericList '\\]' ;
	public final void formalGenerics() throws RecognitionException {
		try {
			// eiffel.g:72:16: ( '\\[' formalGenericList '\\]' )
			// eiffel.g:73:4: '\\[' formalGenericList '\\]'
			{
			match(input,40,FOLLOW_40_in_formalGenerics239); 
			pushFollow(FOLLOW_formalGenericList_in_formalGenerics241);
			formalGenericList();
			state._fsp--;

			match(input,42,FOLLOW_42_in_formalGenerics243); 
			}

		}
		catch (RecognitionException re) {
			reportError(re);
			recover(input,re);
		}
		finally {
			// do for sure before leaving
		}
	}
	// $ANTLR end "formalGenerics"



	// $ANTLR start "formalGenericList"
	// eiffel.g:76:1: formalGenericList : formalGeneric ( '\\,' formalGeneric )* ;
	public final void formalGenericList() throws RecognitionException {
		try {
			// eiffel.g:76:19: ( formalGeneric ( '\\,' formalGeneric )* )
			// eiffel.g:77:4: formalGeneric ( '\\,' formalGeneric )*
			{
			pushFollow(FOLLOW_formalGeneric_in_formalGenericList256);
			formalGeneric();
			state._fsp--;

			// eiffel.g:78:4: ( '\\,' formalGeneric )*
			loop4:
			while (true) {
				int alt4=2;
				int LA4_0 = input.LA(1);
				if ( (LA4_0==21) ) {
					alt4=1;
				}

				switch (alt4) {
				case 1 :
					// eiffel.g:78:6: '\\,' formalGeneric
					{
					match(input,21,FOLLOW_21_in_formalGenericList263); 
					pushFollow(FOLLOW_formalGeneric_in_formalGenericList265);
					formalGeneric();
					state._fsp--;

					}
					break;

				default :
					break loop4;
				}
			}

			}

		}
		catch (RecognitionException re) {
			reportError(re);
			recover(input,re);
		}
		finally {
			// do for sure before leaving
		}
	}
	// $ANTLR end "formalGenericList"



	// $ANTLR start "formalGeneric"
	// eiffel.g:81:1: formalGeneric : formalGenericName ;
	public final void formalGeneric() throws RecognitionException {
		try {
			// eiffel.g:81:15: ( formalGenericName )
			// eiffel.g:82:4: formalGenericName
			{
			pushFollow(FOLLOW_formalGenericName_in_formalGeneric281);
			formalGenericName();
			state._fsp--;

			 constraint 
			}

		}
		catch (RecognitionException re) {
			reportError(re);
			recover(input,re);
		}
		finally {
			// do for sure before leaving
		}
	}
	// $ANTLR end "formalGeneric"



	// $ANTLR start "formalGenericName"
	// eiffel.g:86:1: formalGenericName : identifier ;
	public final void formalGenericName() throws RecognitionException {
		try {
			// eiffel.g:86:19: ( identifier )
			// eiffel.g:87:4: identifier
			{
			pushFollow(FOLLOW_identifier_in_formalGenericName299);
			identifier();
			state._fsp--;

			}

		}
		catch (RecognitionException re) {
			reportError(re);
			recover(input,re);
		}
		finally {
			// do for sure before leaving
		}
	}
	// $ANTLR end "formalGenericName"



	// $ANTLR start "constraint"
	// eiffel.g:90:1: constraint : '\\-\\>' classType ;
	public final void constraint() throws RecognitionException {
		try {
			// eiffel.g:90:12: ( '\\-\\>' classType )
			// eiffel.g:91:4: '\\-\\>' classType
			{
			match(input,23,FOLLOW_23_in_constraint312); 
			pushFollow(FOLLOW_classType_in_constraint314);
			classType();
			state._fsp--;

			}

		}
		catch (RecognitionException re) {
			reportError(re);
			recover(input,re);
		}
		finally {
			// do for sure before leaving
		}
	}
	// $ANTLR end "constraint"



	// $ANTLR start "obsolete"
	// eiffel.g:95:1: obsolete : 'obsolete' message ;
	public final void obsolete() throws RecognitionException {
		try {
			// eiffel.g:95:10: ( 'obsolete' message )
			// eiffel.g:96:4: 'obsolete' message
			{
			match(input,77,FOLLOW_77_in_obsolete328); 
			pushFollow(FOLLOW_message_in_obsolete330);
			message();
			state._fsp--;

			}

		}
		catch (RecognitionException re) {
			reportError(re);
			recover(input,re);
		}
		finally {
			// do for sure before leaving
		}
	}
	// $ANTLR end "obsolete"



	// $ANTLR start "message"
	// eiffel.g:99:1: message : manifestString ;
	public final void message() throws RecognitionException {
		try {
			// eiffel.g:99:9: ( manifestString )
			// eiffel.g:100:4: manifestString
			{
			pushFollow(FOLLOW_manifestString_in_message343);
			manifestString();
			state._fsp--;

			}

		}
		catch (RecognitionException re) {
			reportError(re);
			recover(input,re);
		}
		finally {
			// do for sure before leaving
		}
	}
	// $ANTLR end "message"



	// $ANTLR start "features"
	// eiffel.g:104:1: features : ( 'feature' )+ ;
	public final void features() throws RecognitionException {
		try {
			// eiffel.g:104:10: ( ( 'feature' )+ )
			// eiffel.g:105:4: ( 'feature' )+
			{
			// eiffel.g:105:4: ( 'feature' )+
			int cnt5=0;
			loop5:
			while (true) {
				int alt5=2;
				int LA5_0 = input.LA(1);
				if ( (LA5_0==63) ) {
					alt5=1;
				}

				switch (alt5) {
				case 1 :
					// eiffel.g:105:6: 'feature'
					{
					match(input,63,FOLLOW_63_in_features359); 
					 featureClause 
					}
					break;

				default :
					if ( cnt5 >= 1 ) break loop5;
					EarlyExitException eee = new EarlyExitException(5, input);
					throw eee;
				}
				cnt5++;
			}

			}

		}
		catch (RecognitionException re) {
			reportError(re);
			recover(input,re);
		}
		finally {
			// do for sure before leaving
		}
	}
	// $ANTLR end "features"



	// $ANTLR start "featureClause"
	// eiffel.g:108:1: featureClause : featureDeclarationList ;
	public final void featureClause() throws RecognitionException {
		try {
			// eiffel.g:108:15: ( featureDeclarationList )
			// eiffel.g:109:4: featureDeclarationList
			{
			 clients 
			pushFollow(FOLLOW_featureDeclarationList_in_featureClause379);
			featureDeclarationList();
			state._fsp--;

			}

		}
		catch (RecognitionException re) {
			reportError(re);
			recover(input,re);
		}
		finally {
			// do for sure before leaving
		}
	}
	// $ANTLR end "featureClause"



	// $ANTLR start "featureDeclarationList"
	// eiffel.g:112:1: featureDeclarationList : featureDeclaration ( featureDeclaration )* ;
	public final void featureDeclarationList() throws RecognitionException {
		try {
			// eiffel.g:112:24: ( featureDeclaration ( featureDeclaration )* )
			// eiffel.g:113:4: featureDeclaration ( featureDeclaration )*
			{
			pushFollow(FOLLOW_featureDeclaration_in_featureDeclarationList392);
			featureDeclaration();
			state._fsp--;

			// eiffel.g:114:4: ( featureDeclaration )*
			loop6:
			while (true) {
				int alt6=2;
				int LA6_0 = input.LA(1);
				if ( (LA6_0==TK_IDENTIFIER||LA6_0==68||LA6_0==81) ) {
					alt6=1;
				}
